--- a/index.html
+++ b/index.html
@@ -7,3 +7,6 @@ Date: Feb/March 2010 (exact date top be finalised)
 
 Sponsorship Opportunities
 For information on exhibition and sponsorship opportunities at RubyConf India, contact Sidu Ponnappa at sidu at thoughtworks dot com.
+
+Get involved
+RubyConf India is being co-ordinated and organised by volunteers on the Bangalore Ruby User Group mailing list (http://groups.google.com/group/bangalorerug). To help with the event, simply join the group and ask.
