Adding in Rajveers stuff

--- a/index.html
+++ b/index.html
@@ -1,12 +1,55 @@
-RubyConf India 2010
-
-India's first RubyConf is happening in Bangalore early next year. RubyConf India is co-presented by ThoughtWorks and RubyCentral.
-
-Location: Bangalore
-Date: Feb/March 2010 (exact date top be finalised)
-
-Sponsorship Opportunities
-For information on exhibition and sponsorship opportunities at RubyConf India, contact Sidu Ponnappa at sidu at thoughtworks dot com.
-
-Get Involved
-RubyConf India is being co-ordinated and organised by volunteers on the Bangalore Ruby User Group mailing list (http://groups.google.com/group/bangalorerug). To help with the event, simply join the group and ask.
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en-US">
+<head profile="http://gmpg.org/xfn/11">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<title>RubyConf India 2010: Get involved</title>
+<meta name="robots" content="index,follow" />
+<meta name="author" content="Rajveer Singh Rathore" />
+<meta name="description" content="India's first RubyConf is happening in Bangalore early next year. RubyConf India is co-presented by ThoughtWorks and RubyCentral." />
+<meta name="keywords" content="" />
+<link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
+<link rel="stylesheet" href="css/screen.css" type="text/css" media="screen" />
+<!--[if IE 6]>
+	<link rel="stylesheet" href="css/ie6.css" type="text/css" media="screen" />
+<![endif]-->
+</head>
+<body>
+	<div class="wrapper">
+		<div class="header">
+			<h1 class="logo">Ruby Conference India 2010 - Logo</h1>
+			<div class="blurb">
+				<h2>RubyConf India 2010</h2>
+				<blockquote>India's first RubyConf is happening in Bangalore early next year. RubyConf India is co-presented by ThoughtWorks and RubyCentral.</blockquote>
+				<address>Location: Bangalore</address>
+				<div>Date: Feb/March 2010<span>(exact date to be finalised)</span></div>
+			</div>
+		</div>
+		
+		<div class="nav">
+			Read on: <a href="#">Register</a><a href="#">Schedule</a><a href="#">News</a>
+		</div>
+		
+		<div class="content">
+			<div class="latest_news">
+				<h3>Latest News via Twitter</h3>
+				<p>Blah blah... special guests to gain a deeper understanding of web standards and best practices. Be inspired by fresh ideas and creative new directions.</p>
+				<a href="#" class="btn_yellow" title="Follor us via Twitter">Follow Us</a>
+			</div>
+			<div class="col_1">
+				<h4>Get Involved</h4>
+				<P>RubyConf India is being co-ordinated and organised by volunteers on the Bangalore Ruby User Group mailing list <a href="http://groups.google.com/group/bangalorerug">http://groups.google.com/group/bangalorerug</a>. To help with the event, simply join the group and ask.</P>
+			</div>
+			<div class="col_2">
+				<h4>Sponsorship Opportunities</h4>
+				<P>For information on exhibition and sponsorship opportunities at RubyConf India, contact Sidu Ponnappa at sidu at thoughtworks dot com.</P>
+				- <a href="#">Existing Sponsors</a>
+			</div>
+		</div>
+		<div class="bg"><!---More content can be added from here--> </div>
+		<div class="content_end">&nbsp;</div>
+		
+		<div class="footer">Designed by: <a href="http://www.webdesigncreatives.com" target="_blank">Web Design Creatives</a>, logo credits: <a href="http://www.companyname.com" target="_blank">Company Name</a></div>
+		
+	</div>
+</body>
+</html>
