Updated copy and links

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 		<div class="content">
 			<div class="latest_news">
 				<h3>Latest News via Twitter</h3>
-				<p>Blah blah... special guests to gain a deeper understanding of web standards and best practices. Be inspired by fresh ideas and creative new directions.</p>
-				<a href="#" class="btn_yellow" title="Follor us via Twitter">Follow Us</a>
+				<p>Follow us on Twitter at @rubyconfindia for the lastest updates.</p>
+				<a href="http://twitter.com/rubyconfindia" class="btn_yellow" title="Follor us via Twitter" target="_blank">Follow Us</a>
 			</div>
 			<div class="col_1">
 				<h4>Get Involved</h4>
@@ -42,13 +42,13 @@
 			<div class="col_2">
 				<h4>Sponsorship Opportunities</h4>
 				<P>For information on exhibition and sponsorship opportunities at RubyConf India, contact Sidu Ponnappa at sidu at thoughtworks dot com.</P>
-				- <a href="#">Existing Sponsors</a>
+				<!-- - <a href="#">Existing Sponsors</a>-->
 			</div>
 		</div>
 		<div class="bg"><!---More content can be added from here--> </div>
 		<div class="content_end">&nbsp;</div>
 		
-		<div class="footer">Designed by: <a href="http://www.webdesigncreatives.com" target="_blank">Web Design Creatives</a>, logo credits: <a href="http://www.companyname.com" target="_blank">Company Name</a></div>
+		<div class="footer">Designed by: <a href="http://www.webdesigncreatives.com" target="_blank">Web Design Creatives</a>, RubyConf India Logo Credits: <a href="http://www.richchocolate.com" target="_blank">Rich Chocolate</a></div>
 		
 	</div>
 </body>
