Fixed typo, hyperlinked mailing list

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 			<div class="latest_news">
 				<h3>Latest News via Twitter</h3>
 				<p>Follow us on Twitter at @rubyconfindia for the lastest updates.</p>
-				<a href="http://twitter.com/rubyconfindia" class="btn_yellow" title="Follor us via Twitter" target="_blank">Follow Us</a>
+				<a href="http://twitter.com/rubyconfindia" class="btn_yellow" title="Follow us via Twitter" target="_blank">Follow Us</a>
 			</div>
 			<div class="col_1">
 				<h4>Get Involved</h4>
-				<P>RubyConf India is being co-ordinated and organised by volunteers on the Bangalore Ruby User Group mailing list <a href="http://groups.google.com/group/bangalorerug">http://groups.google.com/group/bangalorerug</a>. To help with the event, simply join the group and ask.</P>
+				<P>RubyConf India is being co-ordinated and organised by volunteers on the Bangalore Ruby User Group <a href="http://groups.google.com/group/bangalorerug">mailing list</a>. To help with the event, simply join the group and ask.</P>
 			</div>
 			<div class="col_2">
 				<h4>Sponsorship Opportunities</h4>
