spelling correction; ty @ramkumarh

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<div class="content">
 			<div class="latest_news">
 				<h3>Latest News via Twitter</h3>
-				<p>Follow us on Twitter at <a href="http://twitter.com/rubyconfindia">@rubyconfindia</a> for the lastest updates.</p>
+				<p>Follow us on Twitter at <a href="http://twitter.com/rubyconfindia">@rubyconfindia</a> for the latest updates.</p>
 				<a href="http://twitter.com/rubyconfindia" class="btn_yellow" title="Follow us via Twitter" target="_blank">Follow Us</a>
 			</div>
 			<div class="col_1">
