Corrected css and changed copy to read supported

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<h1 class="logo">Ruby Conference India 2010 - Logo</h1>
 			<div class="blurb">
 				<h2>RubyConf India 2010</h2>
-				<blockquote>India's first RubyConf is happening in Bangalore early next year. RubyConf India is co-presented by ThoughtWorks and RubyCentral.</blockquote>
+				<blockquote>India's first RubyConf is happening in Bangalore early next year. RubyConf India is presented by <a href="http://www.thoughtworks.com">ThoughtWorks</a> and supported by <a href="http://www.rubycentral.org">RubyCentral</a>.</blockquote>
 				<address>Location: Bangalore</address>
 				<div>Date: Feb/March 2010<span>(exact date to be finalised)</span></div>
 			</div>
