--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<h2>RubyConf India 2010</h2>
 				<blockquote>India's first RubyConf is happening in Bangalore early next year. RubyConf India is presented by <a href="http://www.thoughtworks.com">ThoughtWorks</a> and supported by <a href="http://www.rubycentral.org">RubyCentral</a>.</blockquote>
 				<address>Location: Bangalore</address>
-				<div>Date: March 20th and 21st 2010</div>
+				<div>Date: 20th &amp; 21st March</div>
 			</div>
 		</div>
 		
