Rajveer: Added proposal/participation announcement

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 </head>
 <body>
 	<div class="wrapper">
+
 		<div class="header">
 			<h1 class="logo">Ruby Conference India 2010 - Logo</h1>
 			<div class="blurb">
 				<h2>RubyConf India 2010</h2>
 				<blockquote>India's first RubyConf is happening in Bangalore early next year. RubyConf India is presented by <a href="http://www.thoughtworks.com">ThoughtWorks</a> and supported by <a href="http://www.rubycentral.org">RubyCentral</a>.</blockquote>
+
 				<address>Location: Bangalore</address>
 				<div>Date: 20th &amp; 21st March</div>
 			</div>
@@ -27,6 +29,7 @@
 		
 		<div class="nav">
 			Read on: <a href="#">Register</a><a href="#">Schedule</a><a href="#">News</a>
+
 		</div>
 		
 		<div class="content">
@@ -34,6 +37,7 @@
 				<h3>Latest News via Twitter</h3>
 				<p>Follow us on Twitter at <a href="http://twitter.com/rubyconfindia">@rubyconfindia</a> for the latest updates.</p>
 				<a href="http://twitter.com/rubyconfindia" class="btn_yellow" title="Follow us via Twitter" target="_blank">Follow Us</a>
+
 			</div>
 			<div class="col_1">
 				<h4>Get Involved</h4>
@@ -42,13 +46,35 @@
 			<div class="col_2">
 				<h4>Sponsorship Opportunities</h4>
 				<P>For information on exhibition and sponsorship opportunities at RubyConf India, contact Sidu Ponnappa at sidu at thoughtworks dot com.</P>
-				<!-- - <a href="#">Existing Sponsors</a>-->
 			</div>
 		</div>
-		<div class="bg"><!---More content can be added from here--> </div>
+		<div class="bg">
+			<div class="proposals">
+				<h4>Participation Information</h4>
+				<p class="blrb">We are now accepting proposals for talks for RubyConf India 2010. Please email us at <a href="mailto:proposals@rubyconfindia.org">proposals@rubyconfindia.org</a> (plain text only, please) with the following information:</p>
+				<div class="col_1">
+					<h5>About you</h5>
+					<ul>
+						<li>Name</li>
+						<li>Nationality</li>
+						<li>Contact number</li>
+					</ul>
+				</div>
+				<div class="col_2">
+					<h5>About your talk</h5>
+					<ul>
+						<li>Title</li>
+						<li>Detailed description (2 or 3 paragraphs)</li>
+						<li>Target audience (newbies, advanced, etc.)</li>
+					</ul>
+				</div>	
+				<p class="blrb2">The call for proposals will close on the 20th of January, 2010. Accepted proposals will be announced as and when a decision is reached by the review panel, which consists of <a href="http://olabini.com">Ola Bini</a>, <a href="http://chadfowler.com/">Chad Fowler</a> and <a href="http://m.onkey.org/">Pratik Naik</a>.</p>
+			</div>
+		</div>
 		<div class="content_end">&nbsp;</div>
 		
 		<div class="footer">Designed by: <a href="http://www.webdesigncreatives.com" target="_blank">Web Design Creatives</a>, RubyConf India Logo Credits: <a href="http://www.richchocolate.com" target="_blank">Rich Chocolate</a></div>
+
 		
 	</div>
 	<script type="text/javascript">
