--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<div class="col_1">
 					<h5>About you</h5>
 					<ul>
-						<li>Name</li>
+						<li>Name and Bio</li>
 						<li>Nationality</li>
 						<li>Contact number</li>
 					</ul>
