changed sponsors mail

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			</div>
 			<div class="col_2">
 				<h4>Sponsorship Opportunities</h4>
-				<P>For information on exhibition and sponsorship opportunities at RubyConf India, contact Sidu Ponnappa at sidu at thoughtworks dot com.</P>
+				<P>For information on exhibition and sponsorship opportunities at RubyConf India, contact Sidu Ponnappa at <a href="mailto:sponsors@rubyconfindia.org">sponsors@rubyconfindia.org</a></P>
 			</div>
 		</div>
 		<div class="bg">
