--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>RubyConf India 2010: Get involved</title>
 <meta name="robots" content="index,follow" />
 <meta name="author" content="Rajveer Singh Rathore" />
-<meta name="description" content="India's first RubyConf is happening in Bangalore early next year. RubyConf India is co-presented by ThoughtWorks and RubyCentral." />
+<meta name="description" content="India's first RubyConf is happening in Bangalore in March this year. RubyConf India is co-presented by ThoughtWorks and RubyCentral." />
 <meta name="keywords" content="" />
 <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
 <link rel="stylesheet" href="css/screen.css" type="text/css" media="screen" />
@@ -20,17 +20,17 @@
 			<h1 class="logo">Ruby Conference India 2010 - Logo</h1>
 			<div class="blurb">
 				<h2>RubyConf India 2010</h2>
-				<blockquote>India's first RubyConf is happening in Bangalore early next year. RubyConf India is presented by <a href="http://www.thoughtworks.com">ThoughtWorks</a> and supported by <a href="http://www.rubycentral.org">RubyCentral</a>.</blockquote>
+				<blockquote>India's first RubyConf is happening in Bangalore in March 2010. RubyConf India is presented by <a href="http://www.thoughtworks.com">ThoughtWorks</a> and supported by <a href="http://www.rubycentral.org">RubyCentral</a>.</blockquote>
 
 				<address>Location: Bangalore</address>
 				<div>Date: 20th &amp; 21st March</div>
 			</div>
 		</div>
 		
-		<div class="nav">
+		<!--div class="nav">
 			Read on: <a href="#">Register</a><a href="#">Schedule</a><a href="#">News</a>
 
-		</div>
+		</div-->
 		
 		<div class="content">
 			<div class="latest_news">
@@ -51,8 +51,8 @@
 		<div class="bg">
 			<div class="proposals">
 				<h4>Participation Information</h4>
-				<p class="blrb">We are now accepting proposals for talks for RubyConf India 2010. Please email us at <a href="mailto:proposals@rubyconfindia.org">proposals@rubyconfindia.org</a> (plain text only, please) with the following information:</p>
-				<div class="col_1">
+				<p class="blrb">The call for proposals for talks at RubyConf India 2010 is now closed. We have received thirty seven proposals which are currently being reviewed by a panel consisting of <a href="http://olabini.com">Ola Bini</a>, <a href="http://chadfowler.com/">Chad Fowler</a> and <a href="http://m.onkey.org/">Pratik Naik</a>.</p>
+				<!--div class="col_1">
 					<h5>About you</h5>
 					<ul>
 						<li>Name and Bio</li>
@@ -67,8 +67,8 @@
 						<li>Detailed description (2 or 3 paragraphs)</li>
 						<li>Target audience (newbies, advanced, etc.)</li>
 					</ul>
-				</div>	
-				<p class="blrb2">The call for proposals will close on the 20th of January, 2010. Accepted proposals will be announced as and when a decision is reached by the review panel, which consists of <a href="http://olabini.com">Ola Bini</a>, <a href="http://chadfowler.com/">Chad Fowler</a> and <a href="http://m.onkey.org/">Pratik Naik</a>.</p>
+				</div-->	
+				<p class="blrb2">Watch this space (or <a href="http://twitter.com/rubyconfindia">follow us</a> on twitter) for announcements regarding both accepted proposals and registration for the event. Accepted proposals will be announced by the end of January, and registrations will open sometime early in February.</p>
 			</div>
 		</div>
 		<div class="content_end">&nbsp;</div>
