--- a/index.html
+++ b/index.html
@@ -27,10 +27,9 @@
 			</div>
 		</div>
 		
-		<!--div class="nav">
-			Read on: <a href="#">Register</a><a href="#">Schedule</a><a href="#">News</a>
-
-		</div-->
+		<div class="nav">
+			Navigate: <a href="index.html">Home</a><a href="badges.html">Blog badges</a><!--a href="#">News</a-->
+		</div>
 		
 		<div class="content">
 			<div class="latest_news">
